package kz.aitu.assignment2.abstractfactory;

public interface Button {
    void paint();
}