package kz.aitu.assignment2.abstractfactory;

public interface Checkbox {
    void paint();
}