package kz.aitu.assignment2.abstractfactory;

public interface GUIFactory {
    Button createButton();
    Checkbox createCheckbox();
}